arduino-ide-extension/src/browser/style/main.css
.p-TabBar[data-orientation='horizontal'].theia-app-bottom {
    background: var(--theia-layout-color1);
}

.theia-output {
    background: var(--theia-arduino-terminal);
}

#outputView {
    color: var(--theia-ui-font-color3);
    cursor: text;
}

#toggle-serial-monitor.arduino-tool-icon:hover,
#arduino-verify.arduino-tool-icon:hover,
#arduino-save-file.arduino-tool-icon:hover,
#arduino-show-open-context-menu.arduino-tool-icon:hover,
#arduino-upload.arduino-tool-icon:hover {
    background-position-y: 60px;
}

#toggle-serial-monitor.arduino-tool-icon,
#arduino-verify.arduino-tool-icon,
#arduino-save-file.arduino-tool-icon,
#arduino-show-open-context-menu.arduino-tool-icon,
#arduino-upload.arduino-tool-icon {
    height: 24px;
    width: 24px;
}

#arduino-save-file {
    background: url(../icons/buttons.svg);
    background-size: 800%;
    background-position-y: 28px;
    background-position-x: 59px;
}

#arduino-verify {
    background: url(../icons/buttons.svg);
    background-size: 800%;
    background-position-y: 28px;
    background-position-x: 188px;
}

#arduino-upload {
    background: url(../icons/buttons.svg);
    background-size: 800%;
    background-position-y: 28px;
    background-position-x: 156px;
}

#arduino-show-open-context-menu {
    background: url(../icons/buttons.svg);
    background-size: 800%;
    background-position-y: 28px;
    background-position-x: 92px;
}

#toggle-serial-monitor {
    background: url(../icons/buttons.svg);
    background-size: 800%;
    background-position-y: 28px;
    background-position-x: 28px;
}

.p-TabBar-toolbar .item.arduino-tool-item {
    margin-left: 3px;
}

#arduino-toolbar-container {
    display: flex;
    width: 100%;
}

.p-TabBar-toolbar.theia-arduino-toolbar {
    flex: 1;
}

#theia-top-panel .p-TabBar-toolbar.theia-arduino-toolbar.right {
    justify-content: flex-start;
    min-width: 190px;
}

#theia-top-panel .p-TabBar-toolbar.theia-arduino-toolbar.left {
    min-width: 398px;
    justify-content: flex-end;
}

.arduino-tool-item.item.connected-boards {
    opacity: 1;
}

.arduino-tool-item.item.connected-boards select {
    line-height: var(--theia-content-line-height);
    font-size: var(--theia-ui-font-size1);
    color: var(--theia-ui-font-color1);
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: linear-gradient(45deg, transparent 50%, var(--theia-ui-font-color1) 50%), linear-gradient(135deg, var(--theia-ui-font-color1) 50%, transparent 50%);
    background-position: calc(100% - 6px) 8px, calc(100% - 2px) 8px, 100% 0;
    background-size: 4px 5px;
    background-repeat: no-repeat;
    padding-left: 3px;
    padding-right: 15px;
}

.arduino-toolbar-tooltip {
    margin-left: 10px;
    display: flex;
    align-items: center;
    color: var(--theia-ui-font-color3);
}

.p-TabBar-toolbar .item > div#arduino-toggle-advanced-mode {
    display: flex;
    width: 24px;
    height: 24px;
    justify-content: center;
    align-items: center;
    color: var(--theia-ui-font-color3);
}

.monaco-editor .margin {
    border-right: 2px solid var(--theia-border-color1);
    box-sizing: border-box;
}

.noWrapInfo {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.theia-sidepanel-toolbar .theia-sidepanel-title {
    margin-left: 10px;
}

